js/js.translator/testData/incremental/invalidation/changedDependencyThroughUserLib/externalLib/file2.kt
fun foo2(): Int = 117
